--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.15.4",
+    "@vercel/analytics": "^1.5.0",
     "dotenv": "^16.5.0",
     "next": "15.3.1",
     "react": "^19.0.0",
